@@ -77,7 +77,7 @@ then
 	
 	AM_CONDITIONAL([TESTS_CONFIGURED], [true])
 else
-	WANT_TESTING=0
+	WANT_TESTS=0
 	AM_CONDITIONAL([TESTS_CONFIGURED], [false])
 fi
 
